--- a/index.html
+++ b/index.html
@@ -1,50 +1,75 @@
 <!DOCTYPE html>
-<html>
+<html lang="id">
 <head>
+    <meta charset="UTF-8">
     <title>Katalog Produk</title>
     <style>
         body {
             font-family: Arial, sans-serif;
             background-color: #f9f9f9;
-            margin: 20px;
+            margin: 0;
+            padding: 0;
+            display: flex;
+            min-height: 100vh;
         }
-        h1 {
-            text-align: center;
-            color: #333;
+        .sidebar {
+            width: 300px;
+            background-color: #2c3e50;
+            color: white;
+            padding: 30px 20px;
+        }
+        .sidebar h2 {
+            font-size: 20px;
+            margin-bottom: 15px;
+            border-bottom: 1px solid #ccc;
+            padding-bottom: 5px;
+        }
+        .sidebar p {
+            margin: 8px 0;
+        }
+        .main {
+            flex-grow: 1;
+            padding: 40px 20px;
+            display: flex;
+            justify-content: center;
+            align-items: center;
         }
         .product {
-            width: 320px;
-            margin: 20px auto;
-            padding: 15px;
+            width: 350px;
             background-color: white;
-            box-shadow: 0 0 8px rgba(0,0,0,0.1);
-            border-radius: 8px;
+            padding: 20px;
+            box-shadow: 0 0 10px rgba(0,0,0,0.1);
+            border-radius: 10px;
             text-align: center;
         }
         .product img {
             max-width: 100%;
-            border-radius: 5px;
+            border-radius: 8px;
         }
         .product p {
-            margin: 8px 0;
+            margin: 10px 0;
             font-size: 16px;
         }
         .product p strong {
-            color: #555;
+            color: #333;
         }
     </style>
 </head>
 <body>
-    <h1>Katalog Produk Kami</h1>
-    
-    <div class="product">
-        <img src="AromaKopi.jpg" alt="Produk Kopi Premium">
-        <p><strong>Nama Produk:</strong> Kopi Robusta Premium</p>
-        <p><strong>Harga:</strong> Rp 165.000</p>
-        <p><strong>Deskripsi:</strong> Kopi robusta pilihan dengan aroma khas dan cita rasa yang kuat, cocok untuk penikmat kopi sejati.</p>
+    <div class="sidebar">
+        <h2>Informasi Tugas</h2>
+        <p><strong>Nama:</strong> Didin Oktario</p>
+        <p><strong>NIM:</strong> 049072559</p>
+        <p><strong>Mata Kuliah:</strong><br>MSIM4304 – Dasar Infrastruktur TI</p>
     </div>
-    
+
+    <div class="main">
+        <div class="product">
+            <img src="AromaKopi.jpg" alt="Produk Kopi Premium">
+            <p><strong>Nama Produk:</strong> Kopi Robusta Premium</p>
+            <p><strong>Harga:</strong> Rp 165.000</p>
+            <p><strong>Deskripsi:</strong> Kopi robusta pilihan dengan aroma khas dan cita rasa yang kuat, cocok untuk penikmat kopi sejati.</p>
+        </div>
+    </div>
 </body>
 </html>
-
-
