--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
         <p><strong>Nama:</strong> Didin Oktario</p>
         <p><strong>NIM:</strong> 049072559</p>
         <p><strong>Mata Kuliah:</strong><br>MSIM4304 – Dasar Infrastruktur TI</p>
-        <p><strong>KEMENTERIAN PENDIDIKAN TINGGI, SAINS, DAN TEKNOLOGI UNIVERSITAS TERBUKA</strong></p>
+        <h2>KEMENTERIAN PENDIDIKAN TINGGI, SAINS, DAN TEKNOLOGI UNIVERSITAS TERBUKA</h2>
     </div>
 
     <div class="main">
